fixes layout spacing

--- a/client/src/pages/styles/ContactPage.css
+++ b/client/src/pages/styles/ContactPage.css
@@ -1,8 +1,9 @@
 /* Contact Header */
 .contact-header {
   text-align: center;
-  margin: 0 auto;
   padding: 40px 20px;
+  margin-top: 30px;
+  margin-bottom: -40px;
 }
 
 .contact-header h1 {
@@ -19,7 +20,7 @@
 /* Direct Contact Info */
 .contact-info {
   text-align: center;
-  margin: 30px auto;
+  margin: 0px auto;
   padding: 20px;
   max-width: 600px;
   background-color: #fff;
@@ -68,7 +69,7 @@
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   border-radius: 8px;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  margin-bottom: 50px;;
+  margin-bottom: 70px;
 }
 
 .contact-form-section:hover {
